--- a/demo/.gitignore
+++ b/demo/.gitignore
@@ -2,6 +2,9 @@
 **/build/
 !src/**/build/
 .gradle.properties
+.settings
+app/.settings
+app/build
 
 # Ignore Gradle GUI config
 gradle-app.setting
@@ -18,5 +21,6 @@ gradle-app.setting
 # Eclipse Gradle plugin generated files
 # Eclipse Core
 .project
+
 # JDT-specific (Eclipse Java Development Tools)
 .classpath
